# modelplane

./: .env  .env.jupyteronly  .env.nojupyter  .gitignore  Dockerfile.jupyter  Dockerfile.mlflow  Dockerfile.mockvllm  README.md  docker-compose.yaml  pyproject.toml  start_jupyter.sh  start_services.sh
.dvc/: config
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: tests.yml
flightdeck/: Annotator Development Template.ipynb
flightpaths/: Annotator Development Template.ipynb  Data.ipynb  Ensemble Development Template.ipynb  Running the Evaluator with Mods.ipynb  Security DAG Metadata Example.md  vLLM Annotator.ipynb
flightpaths/config/: secrets.toml
flightpaths/data/: .gitignore  airr_official_1.0_demo_en_us_prompt_set_release_reduced.csv  demo_prompts_mini.csv.dvc  fakegroundtruth.csv
scripts/: check_mlflow_versions.sh  run_flightpaths_locally.sh  run_tests_locally.sh
src/modelplane/: __init__.py  cli.py
src/modelplane/evaluator/: annotator.py  context.py  cost.py  dag.py  nodes.py  outputs.py  prompt_enricher.py  safety.py
src/modelplane/mlflow/: datasets.py  health.py  loghelpers.py
src/modelplane/runways/: __init__.py  annotator.py  data.py  lister.py  responder.py  run.py  scorer.py  utils.py
src/modelplane/utils/: env.py  input.py  vllm.py
tests/data/: annotations.csv  ground_truth.csv  prompts-responses.csv  prompts.csv
tests/it/: test_cli.py  test_health.py  test_input.py
tests/it/runways/: half_safe_annotator.py  random_annotator.py  test_e2e.py  test_responder.py
tests/notebooks/: mock_vllm_server.py  run.py
tests/unit/: test_lister.py  test_scorer.py
tests/unit/evaluator/: conftest.py  mocks.py  test_composer.py  test_context.py  test_dag.py  test_nodes.py  test_prompt_enricher.py  test_safety.py
