[tool.poetry]
name = "modelplane"
version = "0.1.0"
description = ""
authors = ["MLCommons AI Safety <ai-safety-engineering@mlcommons.org>"]
license = "Apache-2.0"
readme = "README.md"
packages = [
    { include = "modelplane", from = "src" },
]

[tool.poetry.dependencies]
python = ">=3.10,!=3.12.5,<3.13"
click = "^8"
dvc = {extras = ["gs"], version = "^3.64"} 
modelbench = {git = "https://github.com/mlcommons/modelbench.git", rev = "8bf3a7bedcf2ae4049373a46e73ca9be6961c8c6" }
mlflow = "3.6.0"
python-dotenv = "^1"
requests = "^2"
prometheus-client = "*" # version controlled by dependencies
jsonlines = "^4"
numpy = "^2"
matplotlib = "^3"
jupyter = "^1"
jupyterlab-git = "*"
scikit-learn = "^1.5.0"
pandas = "^2.2.2"
modelbench-private = { git = "git@github.com:mlcommons/modelbench-private.git", rev = "44009d7ceba30931dd3fc15af4df22399ee6e0e0", optional = true }

[tool.poetry.extras]
modelbench-private = ["modelbench-private"]

[tool.poetry.group.dev.dependencies]
ipython = "<9"

[tool.poetry.group.test.dependencies]
pytest = "^9"
pytest-cov = "^7"

[tool.poetry.scripts]
modelplane = "modelplane.cli:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

