[tool.poetry]
name = "modelplane"
version = "0.1.0"
description = ""
authors = ["MLCommons AI Safety <ai-safety-engineering@mlcommons.org>"]
license = "Apache-2.0"
readme = "README.md"
packages = [
    { include = "modelplane", from = "src" },
]

[tool.poetry.dependencies]
python = ">=3.12,!=3.12.5,<4"
click = "^8"
dvc = {extras = ["gs"], version = "^3.60"} 
mlflow = { extras = ["auth"], version = "3.7.0" }
python-dotenv = "^1"
requests = "^2"
prometheus-client = "*" # version controlled by dependencies
jsonlines = "^4"
numpy = "^2"
matplotlib = "^3"
jupyter = "^1"
jupyterlab-git = "*"
scikit-learn = "^1.5.0"
pandas = "^2.2.2"
modelbench = {git = "https://github.com/mlcommons/modelbench.git" }

[tool.poetry.group.dev.dependencies]
ipython = "<9"

[tool.poetry.group.test.dependencies]
pytest = "^8"
pytest-cov = "^6"

[tool.poetry.group.mlflow.dependencies]
psycopg2-binary = "^2.9.10"
boto3 = "^1.38.31"
google-cloud-storage = "^3.1.0"

[tool.poetry.scripts]
modelplane = "modelplane.cli:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

