[project]
name = "modelplane"
version = "0.1.0"
description = ""
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [
    { name = "MLCommons AI Safety", email = "ai-safety-engineering@mlcommons.org" },
]
requires-python = ">=3.12,!=3.12.5,<4"
dependencies = [
    "click>=8,<9",
    "dvc[gs]>=3.60,<4",
    "mlflow[auth]==3.7.0",
    "python-dotenv>=1,<2",
    "requests>=2,<3",
    "prometheus-client",
    "jsonlines>=4,<5",
    "numpy>=2,<3",
    "matplotlib>=3,<4",
    "jupyter>=1,<2",
    "jupyterlab-git",
    "scikit-learn>=1.5.0,<2.0.0",
    "pandas>=2.2.2,<4",
    "modelbench @ git+https://github.com/mlcommons/modelbench.git",
    "graphviz>=0.20,<1",
]

[project.scripts]
modelplane = "modelplane.cli:cli"

[dependency-groups]
dev = [
    "ipython<10",
]
test = [
    "pytest>=9.0.3,<10",
    "pytest-cov>=6,<8",
]
mlflow = [
    "psycopg2-binary>=2.9.10,<3",
    "boto3>=1.38.31,<2",
    "google-cloud-storage>=3.1.0,<4",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["modelplane", "modelplane.*"]

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"
